--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,13 +23,13 @@ jobs:
       - name: Setup Go environment
         uses: actions/setup-go@v5.5.0
         with:
-          go-version: '1.24'
+          go-version: "1.24"
 
       - name: Build go project
         run: |
           make build-go
 
-  build-docker:
+  build-docker-local:
     runs-on: ubuntu-22.04
     steps:
       - name: Check out repository
@@ -38,6 +38,16 @@ jobs:
       - name: Build docker image
         run: |
           docker build .
+
+  build-docker-heighliner:
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Check out repository
+        uses: actions/checkout@v5
+
+      - name: Build docker image for Heighliner
+        run: |
+          make build-docker
 
   build-proto:
     runs-on: ubuntu-22.04
