--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Setup Go environment
         uses: actions/setup-go@v5.5.0
         with:
-          go-version: "1.24"
+          go-version-file: 'go.mod'
 
       - name: Build go project
         run: |
