--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Setup Go environment
         uses: actions/setup-go@v5.5.0
         with:
-          go-version: "1.24"
+          go-version-file: 'go.mod'
 
       - name: Restore Cache for Tools
         uses: actions/cache@v4
@@ -80,7 +80,7 @@ jobs:
       - name: Setup Go environment
         uses: actions/setup-go@v5.5.0
         with:
-          go-version: "1.24"
+          go-version-file: 'go.mod'
 
       - name: Install AXONE blockchain
         run: |
