--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -108,6 +108,17 @@ jobs:
         with:
           version: v2.1.6
 
+      - name: Verify Go modules are tidy
+        if: steps.changed-go-files.outputs.any_changed == 'true'
+        run: |
+          go mod tidy
+          if ! git diff --quiet -- go.mod go.sum; then
+            echo "❌ go.mod or go.sum are out of date"
+            git --no-pager diff -- go.mod go.sum
+            exit 1
+          fi
+          echo "✅ go.mod and go.sum are tidy"
+
       - name: Lint go code (gofumpt)
         if: steps.changed-go-files.outputs.any_changed == 'true'
         run: |
