ci(workflow): enable go module cache across workflows

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,9 @@ jobs:
         uses: actions/setup-go@v6.0.0
         with:
           go-version-file: 'go.mod'
+          cache: true
+          cache-dependency-path: |
+            go.sum
 
       - name: Build go project
         run: |
