--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -100,7 +100,9 @@ jobs:
         if: steps.changed-go-files.outputs.any_changed == 'true'
         with:
           go-version-file: 'go.mod'
-          cache: false
+          cache: true
+          cache-dependency-path: |
+            go.sum
 
       - name: Lint go code (golangci-lint)
         uses: golangci/golangci-lint-action@v8
@@ -171,6 +173,9 @@ jobs:
         uses: actions/setup-go@v6.0.0
         with:
           go-version-file: 'go.mod'
+          cache: true
+          cache-dependency-path: |
+            go.sum
 
       - name: Generate command documentation
         run: |
