--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,7 +30,9 @@ jobs:
             type=semver,pattern={{major}}.{{minor}}
             type=semver,pattern={{major}}
           labels: |
-            org.opencontainers.image.vendor=OKP4
+            org.opencontainers.image.vendor=Axone Protocol
+            org.opencontainers.image.url=https://axone.xyz
+            org.opencontainers.image.documentation=https://docs.axone.xyz
 
       - name: Login to Docker registry
         uses: docker/login-action@v3
@@ -88,7 +90,7 @@ jobs:
       - name: Setup buf
         uses: bufbuild/buf-setup-action@v1.50.0
 
-      - name: Push okp4 proto on buf registry
+      - name: Push axoned proto on buf registry
         run:
           buf push proto --tag ${{ github.ref_type == 'tag' && github.ref_name || github.sha }}
 
